src/objects/RandomizationTestingDetail__c.object
<CustomObject>
    <fields>
        <fullName>Current_Patient_XML__c</fullName>
        <label>Current Patient XML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ER__c</fullName>
        <label>ER</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_URL__c</fullName>
        <label>Engine URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HER2ByFISH__c</fullName>
        <label>HER2ByFISH</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HER2ByIHC__c</fullName>
        <label>HER2ByIHC</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HER2ByTargetPrint__c</fullName>
        <label>HER2ByTargetPrint</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsRandomized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRandomized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Laterality__c</fullName>
        <label>Laterality</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MP__c</fullName>
        <label>MP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <label>MiddleName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PR__c</fullName>
        <label>PR</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RandomizationResponse__c</fullName>
        <label>Randomization Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_XML__c</fullName>
        <label>Request XML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trial_Name__c</fullName>
        <label>Trial Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSeed1__c</fullName>
        <label>nSeed1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSeed2__c</fullName>
        <label>nSeed2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RandomizationTestingDetail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>MiddleName__c</columns>
        <columns>LastName__c</columns>
        <columns>IsRandomized__c</columns>
        <columns>RandomizationResponse__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RandomizationTestingDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>